--- a/less/modal.less
+++ b/less/modal.less
@@ -3029,7 +3029,8 @@ html[data-theme='dark'] {
 #showCpeDialog-content,
 #showKbidDialog-content,
 #showEndpointDialog-content,
-#showMalwareDialog-content {
+#showMalwareDialog-content,
+#showGcbDialog-content {
   min-width: 1500px;
   min-height: 700px;
   #activeCveInfoButtons,
