Change radio button color.

--- a/less/app.less
+++ b/less/app.less
@@ -750,6 +750,10 @@ button.standard:hover:not([disabled]) {
   .checkbox-ui,
   .radio-ui {
     padding: 0px 2px 5px 5px;
+    color: var(--primaryContentHeader);
+    &.Mui-disabled {
+      color: rgba(0, 0, 0, 0.26);
+    }
   }
   .date-time-picker,
   .date-picker,
