Add malware compress and download buttons.

--- a/less/modal.less
+++ b/less/modal.less
@@ -276,6 +276,14 @@ html[data-theme='dark'] {
         white-space: pre-line;
       }
     }
+    .form {
+      margin: 10px 0;
+      .form-title {
+        color: var(--primaryTextColor);
+        text-align: left;
+        margin: 10px;
+      }
+    }
     button {
       margin-top: 10px;
     }
