--- a/less/modal.less
+++ b/less/modal.less
@@ -3430,3 +3430,41 @@ html[data-theme='dark'] {
     }
   }
 }
+
+#hmdSettingsDialog-content {
+  width: 1378px;
+  max-width: 1378px !important;
+  .data-content {
+    .parent-content {
+      .basic-form {
+        margin: 0;
+        border: 0;
+        .hmd-settings {
+          .form-group {
+            min-width: 1060px;
+            header {
+              padding: 0;
+            }
+            .group {
+              padding: 0;
+              padding-right: 2px;
+              > label, .group-content > label {
+                color: var(--primaryTextColor);
+              }
+            }
+            .c-multi.inline {
+              .group {
+                width: auto;
+              }
+            }
+            .sub-section {
+              .content {
+                padding: 0;
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+}
