--- a/less/app.less
+++ b/less/app.less
@@ -4699,6 +4699,7 @@ button.standard:hover:not([disabled]) {
 
 .online-status, .risk-level, .true-false-status, .status-success, .status-fail {
   margin: 0 5px;
+  white-space: nowrap;
 }
 
 .online-status:before, .risk-level:before, .true-false-status:before, .training-status:before {
